# Capstone-project

./: .gitignore  COVERAGE_REPORT.md  README.md  env.example  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/routes/: analysis.py  health.py  logs.py  resolution.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/models/: domain.py  schemas.py
app/services/: embedding_service.py  log_parser.py  rag_engine.py  resolver.py  retriever.py  vector_store.py
app/tests/: conftest.py
app/tests/integration/: test_log_ingestion_api.py  test_rag_pipeline.py  test_resolution_api.py
app/tests/unit/: test_embeddings.py  test_log_parser.py  test_vector_store.py
app/utils/: helpers.py  similarity.py  text_cleaner.py
scripts/: seed_demo_data.py
